docs/pages/versions/v57.0.0/sdk/ui/universal/icon.mdx
---
title: Icon
description: A platform-native icon — SF Symbol on iOS, Material Symbol on Android.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'ios', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { PlatformSpotlight, PlatformTabsGroup } from '~/ui/components/PlatformTabs';
import { Terminal } from '~/ui/components/Snippet';

A platform-native icon. On Android, it renders a Material Symbol XML vector drawable (recommended source: [`@expo/material-symbols`](https://www.npmjs.com/package/@expo/material-symbols)). On iOS, it renders an [SF Symbol](https://developer.apple.com/sf-symbols/).

> **Note:** `Icon` does not render on web.

<PlatformTabsGroup>

<PlatformSpotlight
  android={{
    src: '/static/images/expo-ui/icon/android-light.webp',
    darkSrc: '/static/images/expo-ui/icon/android-dark.webp',
    alt: 'Wi-Fi, Bluetooth, mail, and person icons rendered with the Material 3 Icon component',
  }}
  ios={{
    src: '/static/images/expo-ui/icon/ios-light.webp',
    darkSrc: '/static/images/expo-ui/icon/ios-dark.webp',
    alt: 'Wi-Fi, radio waves, mail, and person icons rendered with SF Symbols',
  }}
/>

## Installation

<APIInstallSection />

Optionally, install [`@expo/material-symbols`](https://www.npmjs.com/package/@expo/material-symbols) to use the bundled icons on Android. For a different style or custom axes, see [Custom styles on the Jetpack Compose Icon page](/versions/latest/sdk/ui/jetpack-compose/icon/#custom-styles-via-expomaterial-symbols-cli) — no install needed.

<Terminal cmd={['$ npx expo install @expo/material-symbols']} />

## Usage

### Cross-platform icon with `Icon.select`

[`Icon.select`](#selectspec) picks the right asset for the current platform. Pair it with [`@expo/ui/babel-plugin`](https://github.com/expo/expo/tree/main/packages/expo-ui/plugin) (auto-loaded by `babel-preset-expo`) so Metro can tree-shake the unused side per platform.

<ComponentExample
  title="IconSelectExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/universal-icon-select-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-icon-select-android-dark.webp',
    alt: 'A large orange star drawn as a Material Symbol',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/universal-icon-select-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-icon-select-ios-dark.webp',
    alt: 'A large orange star drawn as an SF Symbol',
  }}>

```tsx
import { Host, Icon } from '@expo/ui';

export default function IconSelectExample() {
  return (
    <Host matchContents>
      <Icon
        name={Icon.select({
          ios: 'star.fill',
          android: import('@expo/material-symbols/star.xml'),
        })}
        size={32}
        color="orange"
      />
    </Host>
  );
}
```

</ComponentExample>

### Hoisted `Icon.select`

Hoist the [`Icon.select`](#selectspec) call when reusing the same icon across multiple call sites.

<ComponentExample
  title="HoistedIconExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/universal-icon-hoisted-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-icon-hoisted-android-dark.webp',
    alt: 'A row of three small gold stars drawn as Material Symbols',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/universal-icon-hoisted-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-icon-hoisted-ios-dark.webp',
    alt: 'A row of three small gold stars drawn as SF Symbols',
  }}>

```tsx
import { Host, Row, Icon } from '@expo/ui';

const STAR = Icon.select({
  ios: 'star.fill',
  android: import('@expo/material-symbols/star.xml'),
});

export default function HoistedIconExample() {
  return (
    <Host matchContents>
      <Row spacing={4}>
        <Icon name={STAR} size={20} color="gold" />
        <Icon name={STAR} size={20} color="gold" />
        <Icon name={STAR} size={20} color="gold" />
      </Row>
    </Host>
  );
}
```

</ComponentExample>

### Platform-specific files

Inside an **.android.tsx** file, import the XML asset directly. Inside an **.ios.tsx** file, pass the SF Symbol name as a string.

```tsx Icon.android.tsx
import StarIcon from '@expo/material-symbols/star.xml';
import { Host, Icon } from '@expo/ui';

export default function StarRow() {
  return (
    <Host matchContents>
      <Icon name={StarIcon} size={24} />
    </Host>
  );
}
```

```tsx Icon.ios.tsx
import { Host, Icon } from '@expo/ui';

export default function StarRow() {
  return (
    <Host matchContents>
      <Icon name="star.fill" size={24} />
    </Host>
  );
}
```

## API

```tsx
import { Icon } from '@expo/ui';
```

<APISection packageName="expo-ui/universal/icon" apiName="Icon" />

</PlatformTabsGroup>
